
java {
	sourceCompatibility = '21'
}


dependencies {
	implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '3.1.0'
}